--- a/guides/assets/stylesrc/main.scss
+++ b/guides/assets/stylesrc/main.scss
@@ -642,6 +642,10 @@ body.guide {
         width: 30vw;
       }
 
+      h3.chapter img {
+        margin-right: 0.25em;
+      }
+
       ol {
         @include media('>desktop') {
           overflow-y: auto;
